# MessageFastDDS

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json
Publisher/: CMakeLists.txt  Message.cpp  Message.h  PublishMessage.cpp  PublishMessage.h  PublisherApp.cpp  PublisherApp.h  PublisherApp.ui  pmain.cpp
Subscriber/: CMakeLists.txt  SubscribeMessage.cpp  SubscribeMessage.h  SubscriberApp.cpp  SubscriberApp.h  SubscriberApp.ui  smain.cpp
